ajuste status
